# claude-statusline

./: .gitignore  README.md  pyproject.toml
.claude/skills/staline/: SKILL.md
docs/: ARCHITECTURE.md
examples/: sample-session.json
scripts/: install.ps1  install.sh
skills/claude-statusline/: SKILL.md
skills/staline/: SKILL.md
src/claude_statusline/: __main__.py  cli.py
tests/: test_renderer.py
