[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "staline"
version = "0.1.0"
description = "Staline: branded status line CLI for Claude Code"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Yang" }
]
keywords = ["staline", "claude", "claude-code", "statusline", "cli", "macos"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Build Tools"
]

[project.urls]
Homepage = "https://github.com/yang1996202-cpu/claude-statusline"
Issues = "https://github.com/yang1996202-cpu/claude-statusline/issues"

[project.scripts]
staline = "claude_statusline.cli:main"
claude-statusline = "claude_statusline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
